Fix contrast issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3035,7 +3035,7 @@ textarea.form-control-lg {
 .btn-primary {
   color: #fff;
   background-color: #64a19d;
-  border-color: #64a19d;
+  border-color: ##4c7a77;
 }
 .btn-primary:hover {
   color: #fff;
